--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Brainrots</title>
+  <title>BRAINROT FOR TRADING</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -15,10 +15,22 @@
       background-position: center;
       background-attachment: fixed;
     }
-    .overlay { background: rgba(2,6,23,.9); min-height: 100vh; }
-    header { padding: 25px; text-align: center; }
-    h1 { margin: 0; font-size: 2.4rem; }
-    header p { color: #cbd5f5; }
+
+    .overlay {
+      background: rgba(2,6,23,.9);
+      min-height: 100vh;
+    }
+
+    header {
+      padding: 25px;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 2.6rem;
+      letter-spacing: 2px;
+    }
 
     .container {
       padding: 20px;
@@ -35,8 +47,10 @@
       box-shadow: 0 16px 30px rgba(0,0,0,.7);
     }
 
-    /* discourage easy saving */
-    img { pointer-events: none; user-select: none; }
+    img {
+      pointer-events: none;
+      user-select: none;
+    }
 
     .card img {
       width: 100%;
@@ -57,8 +71,10 @@
       margin-bottom: 8px;
     }
 
-    .card h2 { margin: 8px 0 6px; font-size: 1.35rem; }
-    .card p { font-size: .95rem; color: #cbd5f5; }
+    .card h2 {
+      margin: 10px 0;
+      font-size: 1.35rem;
+    }
 
     .card button {
       margin-top: 12px;
@@ -71,32 +87,45 @@
       color: #020617;
     }
 
-    /* popup */
     .popup {
-      position: fixed; inset: 0; display: none; align-items: center; justify-content: center;
-      background: rgba(0,0,0,.75); z-index: 999;
+      position: fixed;
+      inset: 0;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      background: rgba(0,0,0,.75);
+      z-index: 999;
     }
 
     .popup-content {
-      background: #020617; padding: 26px; border-radius: 22px;
-      width: 90%; max-width: 420px; box-shadow: 0 24px 48px rgba(0,0,0,.85);
+      background: #020617;
+      padding: 26px;
+      border-radius: 22px;
+      width: 90%;
+      max-width: 420px;
+      box-shadow: 0 24px 48px rgba(0,0,0,.85);
       text-align: center;
     }
 
-    .popup-content input {
-      width: 100%; padding: 12px; margin: 10px 0; border-radius: 10px; border: none;
+    .close {
+      margin-top: 12px;
+      padding: 10px;
+      border-radius: 999px;
+      border: none;
+      cursor: pointer;
+      background: #1e293b;
+      color: #e5e7eb;
     }
 
-    .popup-content button {
-      width: 100%; padding: 12px; margin-top: 10px; border: none; border-radius: 999px;
-      background: linear-gradient(135deg,#6366f1,#22d3ee); font-weight: bold; cursor: pointer;
+    footer {
+      text-align: center;
+      padding: 15px;
+      font-size: .8rem;
+      color: #94a3b8;
     }
-
-    .close { background: none; color: #94a3b8; }
-
-    footer { text-align: center; padding: 15px; font-size: .8rem; color: #94a3b8; }
   </style>
 </head>
+
 <body>
   <div class="overlay">
     <header>
@@ -104,27 +133,23 @@
     </header>
 
     <main class="container">
+
+      <!-- ESOK SEKOLAH -->
       <div class="card">
         <span class="badge">SECRET • 20 MILL PER SEC & MORE</span>
-        <figure>
-          <img src="https://cdn-offer-photos.zeusx.com/6ada07ec-b28a-463a-983b-4231248bad87.jpg" alt="Spaghetti Tuiletti">
-          <figcaption style="font-size:.8rem;color:#94a3b8;margin-top:6px;">Official Spaghetti Tuiletti brainrot image</figcaption>
-        </figure>
-        <h2>🍝 Spaghetti Tuiletti</h2>
-        
-        <button onclick="openPopup('Spaghetti Tuiletti')">Request Trade</button>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn3mEbdFHVtSP5MtjagEjvSRtQd7vDk-hO3g&s" alt="Esok Sekolah">
+        <h2>📚 Esok Sekolah</h2>
+        <button onclick="openPopup('Esok Sekolah')">Request Trade</button>
       </div>
 
+      <!-- YIN YANG PUMPKIN HOTSPOT -->
       <div class="card">
         <span class="badge">SECRET • 20 MILL PER SEC & MORE</span>
-        <figure>
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqEF5RXExaxBMXok84jSF-zcHW8cZqmmJzrw&s" alt="Yin Yang Pumpkin Hotspot">
-          <figcaption style="font-size:.8rem;color:#94a3b8;margin-top:6px;">Official Yin Yang Pumpkin Hotspot brainrot image</figcaption>
-        </figure>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqEF5RXExaxBMXok84jSF-zcHW8cZqmmJzrw&s" alt="Yin Yang Pumpkin Hotspot">
         <h2>🎃 Yin Yang Pumpkin Hotspot</h2>
-        
         <button onclick="openPopup('Yin Yang Pumpkin Hotspot')">Request Trade</button>
       </div>
+
     </main>
 
     <footer>
@@ -132,14 +157,15 @@
     </footer>
   </div>
 
+  <!-- POPUP -->
   <div class="popup" id="popup">
     <div class="popup-content">
-      <h3 id="tradeTitle">Brainrot Trade</h3>
-      <p>Email me directly to trade:</p>
-      <div style="margin:12px 0;padding:12px;border-radius:16px;background:#020617;border:2px dashed #22d3ee;color:#e5e7eb;font-weight:bold;">
+      <h3 id="tradeTitle">Trade</h3>
+      <p>Email me directly:</p>
+      <div style="margin:12px 0;padding:12px;border-radius:16px;background:#020617;border:2px dashed #22d3ee;font-weight:bold;">
         📧 vihaan.pamulaparthy@gmail.com
       </div>
-      <button class="close" onclick="closePopup()">Cancel</button>
+      <button class="close" onclick="closePopup()">Close</button>
     </div>
   </div>
 
@@ -148,15 +174,14 @@
       document.getElementById('tradeTitle').innerText = 'Trade for ' + name;
       document.getElementById('popup').style.display = 'flex';
     }
+
     function closePopup() {
       document.getElementById('popup').style.display = 'none';
-    }
-    function submitTrade() {
-      alert('Trade request sent 😈'); closePopup();
     }
   </script>
 </body>
 </html>
+
 
 
 
